--- a/index.html
+++ b/index.html
@@ -1,140 +1,213 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Юкки — самая милая чихуахуа</title>
+  <meta charset="UTF-8" />
+  <title>Юкки — звезда 🐶</title>
   <style>
     :root {
       --day-bg: #FAE3D3;
       --night-bg: #2D2D40;
-      --day-text: #333;
-      --night-text: #FBE9D3;
+      --text-day: #333;
+      --text-night: #FBE9D3;
+      --accent: #FFAACB;
     }
-
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      transition: background 0.5s, color 0.5s;
+      transition: background 0.6s, color 0.6s;
+      background-color: var(--day-bg);
+      color: var(--text-day);
     }
-
-    .day {
-      background: var(--day-bg);
-      color: var(--day-text);
+    body.night {
+      background-color: var(--night-bg);
+      color: var(--text-night);
     }
-
-    .night {
-      background: var(--night-bg);
-      color: var(--night-text);
-    }
-
     header {
-      padding: 30px;
+      padding: 30px 10px 10px;
     }
-
     h1 {
-      font-size: 3em;
-      margin-bottom: 0;
+      font-size: 2.8em;
+      margin: 0;
     }
-
     .card {
       background: white;
-      padding: 20px;
       border-radius: 15px;
+      padding: 20px;
       margin: 20px auto;
       width: 90%;
-      max-width: 400px;
+      max-width: 700px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: background 0.6s;
     }
-
-    .night .card {
+    body.night .card {
       background: #3D3D5A;
     }
-
-    img {
-      max-width: 100%;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    p {
-      font-size: 1.2em;
-      margin: 15px 0;
-    }
-
-    .paw-btn {
-      background: #FFAACB;
+    .btn {
+      background: var(--accent);
       color: white;
-      padding: 12px 24px;
       border: none;
       border-radius: 30px;
-      font-size: 1.1em;
+      padding: 12px 24px;
+      font-size: 1em;
       cursor: pointer;
+      margin: 10px 5px;
       transition: transform 0.2s;
-      margin-top: 10px;
     }
-
-    .paw-btn:hover {
+    .btn:hover {
       transform: scale(1.05);
     }
-
     .paw {
       font-size: 3em;
       display: none;
-      margin-top: 15px;
+      margin-top: 10px;
     }
-
+    .info-box {
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 15px;
+      padding: 15px;
+      margin-top: 20px;
+      display: none;
+      text-align: left;
+      font-size: 1.1em;
+    }
+    body.night .info-box {
+      background: rgba(60, 60, 100, 0.85);
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+      gap: 15px;
+      margin-top: 20px;
+    }
+    .gallery-item {
+      background: #fff0f5;
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      padding: 10px;
+      transition: background 0.4s;
+    }
+    body.night .gallery-item {
+      background: #5a5a7f;
+    }
+    .gallery-item img {
+      width: 100%;
+      border-radius: 12px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: transform 0.3s;
+    }
+    .gallery-item img:hover {
+      transform: scale(1.05);
+    }
+    .caption {
+      margin-top: 8px;
+      font-size: 0.9em;
+      color: #444;
+    }
+    body.night .caption {
+      color: #ddd;
+    }
+    video {
+      max-width: 100%;
+      border-radius: 15px;
+      margin-top: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
     footer {
       margin-top: 40px;
       font-size: 0.9em;
       opacity: 0.7;
     }
-
-    /* милые сердечки */
-    body::after {
-      content: "💖 💕 💗 💘 🐾 💓 💝";
-      position: fixed;
-      bottom: 5px;
-      right: 10px;
-      font-size: 1.2em;
-      pointer-events: none;
-      opacity: 0.4;
-    }
   </style>
 </head>
-<body>
-  <div class="wrapper">
-    <header>
-      <h1>Привет, я Юкки! 🐶</h1>
-    </header>
+<body class="day">
+  <header>
+    <h1>Юкки — самая милая чихуахуа 🐶</h1>
+  </header>
+  <div class="card">
+    <p>Привет! Меня зовут Юкки. Я люблю вкусняшки, спать на кровати и выполнять команды!</p>
+    <div>
+      <button class="btn" onclick="toggleTheme()">🌗 Сменить тему</button>
+      <button class="btn" onclick="showMore()">❤️ Расскажи больше</button>
+      <button class="btn" onclick="showPaw()">🐾 Дай лапу</button>
+    </div>
+    <div class="paw" id="paw">🐾</div>
 
-    <div class="card">
-      <img src="https://ссылка_на_фото_юкки.jpg" alt="Юкки">
-      <p>Я чихуахуа, мне 3 года. Люблю вкусняшки, играть и выполнять команды! 🐾</p>
-      <button class="paw-btn" onclick="showPaw()">Дай лапу!</button>
-      <div class="paw" id="paw">🐾</div>
+    <div class="info-box" id="info">
+      <h3>Интересные факты о Юкки:</h3>
+      <ul>
+        <li><strong>Возраст:</strong> 3 года</li>
+        <li><strong>Цвет:</strong> чёрно-белая, с белыми носочками 🖤🤍</li>
+        <li><strong>Любимая команда:</strong> "Спокойной ночи" 💤</li>
+        <li><strong>Не дружит с другими собаками 😅</strong></li>
+        <li><strong>Очень ласковая и умная!</strong></li>
+      </ul>
     </div>
 
-    <footer>
-      © 2025 Юкки. Самая лучшая собачка на свете 💖
-    </footer>
+    <div class="gallery">
+      <div class="gallery-item">
+        <img src="New_year.jfif" alt="Юкки у ёлки" />
+        <div class="caption">Юкки перед ёлкой в шапочке эльфа 🎄</div>
+      </div>
+      <div class="gallery-item">
+        <img src="paw.jfif" alt="Юккина лапка" />
+        <div class="caption">Юккина лапка 🐾</div>
+      </div>
+      <div class="gallery-item">
+        <img src="sitting.jpg" alt="Юкки сидит" />
+        <div class="caption">Очень милая Юкки 🥰</div>
+      </div>
+      <div class="gallery-item">
+        <img src="winter_dog.jfif" alt="Юкки на снегу" />
+        <div class="caption">Юкки на снегу ❄️</div>
+      </div>
+      <div class="gallery-item">
+        <img src="with_candy_(special).jfif" alt="Юкки с конфетой" />
+        <div class="caption">Юкки с конфетой 🍬</div>
+      </div>
+      <div class="gallery-item">
+        <img src="with_glasses.jfif" alt="Юкки в очках" />
+        <div class="caption">Юкки в очках 🕶️</div>
+      </div>
+      <div class="gallery-item">
+        <img src="with_hat.jfif" alt="Юкки с оригами шапкой" />
+        <div class="caption">Юкки в оригами-шапке 🎩</div>
+      </div>
+      <div class="gallery-item">
+        <img src="with_toy.jfif" alt="Юкки с игрушкой" />
+        <div class="caption">Юкки и ёжик 🤍</div>
+      </div>
+    </div>
+
+    <video controls>
+      <source src="walking.MOV" type="video/quicktime" />
+      Твой браузер не поддерживает видео.
+    </video>
   </div>
+  <footer>
+    © 2025 Юкки. Сделано с любовью 🐶🩷
+  </footer>
 
   <script>
-    // Показать лапу
     function showPaw() {
       const paw = document.getElementById('paw');
       paw.style.display = 'block';
       setTimeout(() => paw.style.display = 'none', 2000);
     }
-
-    // Автоматическая смена темы (день/ночь)
+    function showMore() {
+      const info = document.getElementById('info');
+      info.style.display = info.style.display === 'block' ? 'none' : 'block';
+    }
+    function toggleTheme() {
+      const body = document.body;
+      body.classList.toggle('night');
+      body.classList.toggle('day');
+    }
     const hour = new Date().getHours();
     if (hour >= 19 || hour < 7) {
+      document.body.classList.remove('day');
       document.body.classList.add('night');
-    } else {
-      document.body.classList.add('day');
     }
   </script>
 </body>
